cabal-version:       >=1.10
name:                borel-core
version:             0.13.0.1
synopsis:            Metering System for OpenStack metrics provided by Vaultaire.
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental
build-type:          Simple

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Borel.Types
                     Borel.Aggregate
                     Borel.Server
                     Borel.Log
                     Borel.Source
                     Borel.Query

  other-modules:     Borel.Types.Core
                     Borel.Types.Metric
                     Borel.Aggregate.Ceilometer.Consolidated
                     Borel.Aggregate.Ceilometer.Consolidated.Types
                     Borel.Aggregate.Ceilometer.Consolidated.Query
                     Borel.Aggregate.Ceilometer.Consolidated.Parse
                     Borel.Aggregate.Cumulative
                     Borel.Aggregate.Delta
                     Borel.Server.Types
                     Borel.Server.WAI
                     Borel.Source.HTTP

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=4.7 && <4.8,
                     aeson,
                     binary,
                     blaze-builder,
                     bytestring,
                     cassava,
                     chevalier-common >= 0.4.0,
                     containers >=0.5 && <0.6,
                     fast-logger,
                     http-client,
                     lens,
                     marquise >= 3.2.1,
                     monad-logger < 1.0,
                     mtl,
                     pipes,
                     pipes-safe,
                     scotty,
                     siphash,
                     text,
                     time,
                     transformers,
                     vaultaire-common,
                     vaultaire-control,
                     vaultaire-query >= 0.4.5

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           test-query
  hs-source-dirs:    tests
  main-is:           Query.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     borel-core,
                     containers,
                     hspec,
                     marquise,
                     monad-logger,
                     pipes,
                     pipes-safe,
                     vaultaire-common,
                     vaultaire-query >= 0.4.5

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
