name:                borel-core
version:             0.16.0.0
synopsis:            Metering System for OpenStack metrics provided by Vaultaire.
description:         Leverages Ceilometer, Chevalier and Marquise to meter OpenStack data.
homepage:            https://github.com/anchor/borel-core
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
tested-with:         GHC == 7.8.3
stability:           experimental
category:            Development
build-type:          Simple
cabal-version:       >=1.18

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

source-repository head
  type:                git
  location:            git@github.com:anchor/borel-core.git

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Borel
                     Borel.Types

  other-modules:     Borel.Types.UOM
                     Borel.Types.Metric
                     Borel.Types.Result
                     Borel.Error
                     Borel.Marquise
                     Borel.Chevalier
                     Borel.Ceilometer

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6

  build-depends:     base >=4.7 && <4.8
                   , aeson
                   , attoparsec
                   , binary
                   , bimap
                   , blaze-builder
                   , bytestring
                   , cassava
                   , containers >=0.5 && <0.6
                   , unordered-containers >= 0.2.4
                   , configurator
                   , errors
                   , fast-logger
                   , http-client
                   , hslogger
                   , lens
                   , monad-logger < 1.0
                   , mtl
                   , multiset
                   , pipes
                   , pipes-aeson
                   , pipes-safe
                   , scotty
                   , siphash
                   , text
                   , time
                   , transformers
                   , zeromq4-haskell >= 0.6.3
                   , ceilometer-common >= 0.1.0
                   , chevalier-common >= 0.4.0
                   , marquise >= 3.2.1
                   , vaultaire-common
                   , vaultaire-control
                   , vaultaire-query >= 0.5.0.1

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests,lib

  main-is:             Main.hs

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6

  build-depends:     base >=4.7 && < 5
                   , hspec
                   , aeson
                   , attoparsec
                   , binary
                   , bimap
                   , blaze-builder
                   , bytestring
                   , cassava
                   , configurator
                   , containers >=0.5 && <0.6
                   , unordered-containers >= 0.2.4
                   , errors
                   , fast-logger
                   , http-client
                   , hslogger
                   , lens
                   , monad-logger < 1.0
                   , mtl
                   , multiset
                   , pipes
                   , pipes-aeson
                   , pipes-safe
                   , scotty
                   , siphash
                   , text
                   , time
                   , transformers
                   , ceilometer-common >= 0.1.0
                   , chevalier-common >= 0.4.0
                   , marquise >= 3.2.1
                   , vaultaire-common
                   , vaultaire-control
                   , vaultaire-query >= 0.5.0.1
                   , zeromq4-haskell >= 0.6.3
                   , QuickCheck >= 2.7.6
